# ComputacionGrafica

./: .gitignore  CubeAnimation.7z
08 - Cube Animation 2.0/: cubes.cpp  cubes.h  dRays.cpp  dRays.h  figure.cpp  figure.cpp.bak  figure.h  main.cpp  shaderClass.cpp  shaderClass.h
08 - Cube Animation 2.0/Headers/: TestingFunctions.h
Examples_CuboRubik/: Cubo Rubik.rar  OwnProjects.rar
Examples_CuboRubik/Project_10/: Header.h  ScrambleSimplifier.h  SolvingFunctions.h  main.cpp
Examples_CuboRubik/Project_10Main/src/: main.cpp
Examples_CuboRubik/Project_11/: AdditionalFunctions.h  Testing Functions.h  main.cpp
Examples_CuboRubik/Project_11Main/: CubeRubik
Examples_CuboRubik/Project_11Main/src/: main.cpp
Examples_CuboRubik/Project_12/: camera.h  main.cpp  shader_m.h
Project_00/: CMakeLists.txt  CubeRubik
Project_00/src/: main.cpp
Project_BASE_Windows/: backup.txt  main.cpp
Project_CameraCircular/: main.cpp
Project_CameraCuadrada/: main.cpp
Project_CuboRubik/: CubeRubik  backup.txt
Project_CuboRubik/src/: main.cpp
Project_DificultRubik/: CubeRubik
Project_DificultRubik/src/: backup.cpp  main.cpp
Project_Rubik_MovCamada/: CubeRubik
Project_Rubik_MovCamada/src/: figure.cpp  figure.h  main.cpp  shaderClass.h
Project_Vista2Ejes/: Vista2Ejes
Project_Vista2Ejes/src/: main.cpp
SpaceInvaders_Proyect/: SpaceInvaders  backup.txt
SpaceInvaders_Proyect/Headers/: TestingFunctions.h
SpaceInvaders_Proyect/src/: cubes.cpp  cubes.h  dRays.cpp  dRays.h  figure.cpp  figure.h  main.cpp  shaderClass.cpp  shaderClass.h
TEST_Codes/: main.cpp
(+4 files in other folders)
